@@ -13,6 +13,8 @@ S3method(getOptPathExecTimes,OptPathDF)
 S3method(getOptPathLength,OptPathDF)
 S3method(getOptPathX,OptPathDF)
 S3method(getOptPathY,OptPathDF)
+S3method(getParamIds,Param)
+S3method(getParamIds,ParamSet)
 S3method(hasFiniteBoxConstraints,Param)
 S3method(hasFiniteBoxConstraints,ParamSet)
 S3method(hasRequires,Param)
